# agent-skill-deployer

./: README.md  pyproject.toml
.github/workflows/: test.yml
agent_skill_deployer/: __init__.py  channels.py  cli.py  core.py  hosts.py  inventory.py  pipeline.py
tests/: test_cli.py  test_core.py  test_hosts.py  test_inventory.py  test_pipeline.py
tests/fixtures/example-distribution/: distribution.json
tests/fixtures/example-distribution/skills/example-workflow/: SKILL.md  skill.yaml
